<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/item_tv_reading_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/reading_score" />

    <TextView
        android:id="@+id/item_tv_math_label"
        android:layout_below="@id/item_tv_reading_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/math_score" />

    <TextView
        android:id="@+id/item_tv_writing_label"
        android:layout_below="@+id/item_tv_math_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/writing_score" />

    <TextView
        android:id="@+id/item_tv_reading_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/item_tv_reading_label"
        android:text="@string/reading_score_number"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_tv_math_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_tv_reading_score"
        android:layout_toEndOf="@+id/item_tv_math_label"
        android:text="@string/math_score_number"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/item_tv_writing_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_tv_math_score"
        android:layout_toEndOf="@+id/item_tv_writing_label"
        android:text="@string/writing_score_number"
        android:textStyle="bold"/>
</RelativeLayout>